--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <div class="doc-card" style="border-left: 5px solid #2979FF;">
                     <h3>Gestión del Proyecto</h3>
                     <p>Todo el avance, tareas pendientes y bugs se gestionan a través de nuestro tablero Kanban.</p>
-                    <a href="https://trello.com/b/example" target="_blank" class="btn-primary"
+                    <a href="https://trello.com/" target="_blank" class="btn-primary"
                         style="display: inline-block; margin-top: 1rem; text-decoration: none; padding: 0.5rem 1rem; font-size: 0.8rem;">VER
                         TABLERO DE TRELLO</a>
                 </div>
@@ -185,6 +185,8 @@
                                     docs/initial-requirements</em></small>
                         </li>
                     </ul>
+                    <img src="imgs/trello.png" alt="Estado del Tablero Trello - Día 1"
+                        style="width: 100%; border-radius: 8px; margin-top: 1rem; border: 1px solid #333; opacity: 0.8;">
                 </div>
 
                 <div class="doc-card">
@@ -204,6 +206,8 @@
                                     features/ui-hud</em></small>
                         </li>
                     </ul>
+                    <img src="imgs/trello.png" alt="Estado del Tablero Trello - Día 2"
+                        style="width: 100%; border-radius: 8px; margin-top: 1rem; border: 1px solid #333; opacity: 0.8;">
                 </div>
 
                 <div class="doc-card">
@@ -226,6 +230,8 @@
                                     bugs/collision-fix</em></small>
                         </li>
                     </ul>
+                    <img src="imgs/trello.png" alt="Estado del Tablero Trello - Día 3"
+                        style="width: 100%; border-radius: 8px; margin-top: 1rem; border: 1px solid #333; opacity: 0.8;">
                 </div>
 
                 <div class="doc-card">
@@ -251,6 +257,8 @@
                                     features/difficulty-scaling</em></small>
                         </li>
                     </ul>
+                    <img src="imgs/trello.png" alt="Estado del Tablero Trello - Día 4"
+                        style="width: 100%; border-radius: 8px; margin-top: 1rem; border: 1px solid #333; opacity: 0.8;">
                 </div>
 
                 <div class="doc-card">
@@ -271,6 +279,8 @@
                                     release/v1.0</em></small>
                         </li>
                     </ul>
+                    <img src="imgs/trello_board.png" alt="Estado del Tablero Trello - Día 5"
+                        style="width: 100%; border-radius: 8px; margin-top: 1rem; border: 1px solid #333; opacity: 0.8;">
                 </div>
 
             </div>
