--- a/index.html
+++ b/index.html
@@ -289,6 +289,13 @@
 
     <footer class="footer">
         <p>Proyecto Intermodular DAM - Curso 2025/2026</p>
+        This work is licensed under <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a><img
+            src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt=""
+            style="max-width: 1em;max-height:1em;margin-left: .2em;"><img
+            src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt=""
+            style="max-width: 1em;max-height:1em;margin-left: .2em;"><img
+            src="https://mirrors.creativecommons.org/presskit/icons/nc.svg" alt=""
+            style="max-width: 1em;max-height:1em;margin-left: .2em;">
     </footer>
 
     <!-- Scripts -->
